# SuperGlue2025

./: LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: pylint.yml  tests.yml
backend/: app.py  editor_annotate.py  environment.yml  file_upload.py  molecule_visualize.py  requirements.txt  utils.py
backend/test/: test_file_upload.py  test_molecule_similarity.py
docs/: components.md  use_cases.md  user_stories.md
superglue-front/: package-lock.json  package.json
superglue-front/src/components/: ChemicalEditor.jsx  SidebarFilter.jsx  SimilaritySearch.jsx  StructurePreview.jsx  xxx.jsx
